added contact button fixed smartsockets reference

--- a/generated_publications_smartsockets.html
+++ b/generated_publications_smartsockets.html
@@ -12,11 +12,10 @@
 </dt>
 <dd>
 Jason Maassen and Henri&nbsp;E. Bal.
- Solving the Connectivity Problems in Grid Computing.
+ Smartsockets:Solving the Connectivity Problems in Grid Computing.
  In <em>Proceedings of The 16th IEEE International Symposium on
   High-Performance Distributed Computing (HPDC)</em>, Monterey, CA, USA, June
   2007.
- Accepted for Publication.
 [&nbsp;<a href="generated_publications_smartsockets_bib.html#hpdc-jason">bib</a>&nbsp;| 
 <a href="publications/maassen_hpdc_2007.ps">.ps</a>&nbsp;]
 
