--- a/generated_publications_smartsockets_bib.html
+++ b/generated_publications_smartsockets_bib.html
@@ -14,12 +14,11 @@
 <a name="hpdc-jason"></a><pre>
 @INPROCEEDINGS{<a href="generated_publications_smartsockets.html#hpdc-jason">hpdc-jason</a>,
   author = {Jason Maassen and Henri E. Bal},
-  title = {{Solving the Connectivity Problems in Grid Computing}},
+  title = {{Smartsockets:Solving the Connectivity Problems in Grid Computing}},
   booktitle = {{Proceedings of The 16th IEEE International Symposium on High-Performance Distributed Computing (HPDC)}},
   year = {2007},
   month = JUN,
   address = {Monterey, CA, USA},
-  note = {Accepted for Publication},
   http = {publications/maassen_hpdc_2007.ps}
 }
 </pre>
