--- a/content/menu.html
+++ b/content/menu.html
@@ -4,6 +4,7 @@
 <a class="button" href="people.html">People</a>
 <a class="button" href="users.html">Projects using Ibis</a>
 <a class="button" href="https://gforge.cs.vu.nl/projects/ibis">Project site @ GForge</a>
+<script type="text/javascript"> generate_menu_address( "ibis", "cs.vu.nl" ); </script>
 
 <p class="projectclass">Programming Models</p>
 <a class="button" href="satin.html">Satin</a>
