changed contact address

--- a/content/ipl.html
+++ b/content/ipl.html
@@ -1,7 +1,7 @@
 <table class=topmenu><tr> <td class=topmenu><a class=topmenu href="https://gforge.cs.vu.nl/frs/?group_id=16">Download IPL</a></td>
 <td class=topmenu><a class=topmenu href="downloads/progman.pdf">Programmer's Manual</a></td>
 <td class=topmenu><a class=topmenu href="publications.html#ibis">IPL Publications</a></td>
-<td class=topmenu><script type="text/javascript"> generate_contact_address( "ibis-devel", "cs.vu.nl" ); </script></td>
+<td class=topmenu><script type="text/javascript"> generate_contact_address( "ibis", "cs.vu.nl" ); </script></td>
 </tr>
 </table>
 
