--- a/content/mpj.html
+++ b/content/mpj.html
@@ -2,7 +2,7 @@
 <td class=topmenu><a class=topmenu href="http://gforge.cs.vu.nl/projects/ibis/">Download MPJ/Ibis</a></td>
 <td class=topmenu><a class=topmenu href="publications.html#mpj">MPJ/Ibis Publications</a></td>
 <td class=topmenu><a class=topmenu href="talks.html#mpj">MPJ/Ibis Talks</a></td>
-<td class=topmenu><script type="text/javascript"> generate_contact_address( "ibis-devel", "cs.vu.nl" ); </script></td>
+<td class=topmenu><script type="text/javascript"> generate_contact_address( "ibis", "cs.vu.nl" ); </script></td>
 </tr>
 </table>
 
