--- a/content/smartsockets.html
+++ b/content/smartsockets.html
@@ -8,4 +8,14 @@
 
 <h2>Smartsockets</h2>
 
-This page still empty. :(
+Tightly coupled parallel applications are increasingly run in grid
+environments. Unfortunately, on many grid sites the ability of machines to
+create or accept network connections is severely limited by firewalls, network
+address translation (NAT) or non-routed networks. Multi homing further
+complicates connection setup and machine identification.  Although ad-hoc
+solutions exist for some of these problems, it is usually up to the
+application's user to discover the cause of the connectivity problems and find
+a solution. The SmartSockets communication library lifts this burden by
+automatically discovering the connectivity problems and  solving them with as
+little support from the user as possible.
+
