+ Updated projects webpage.

--- a/content/projects.html
+++ b/content/projects.html
@@ -136,19 +136,22 @@ of Reo.
 </p>
 
 
-<li><b>JavaGAT Grenchmark</b></li>
+<li><b>Poker player (challenging)</b></li>
 
 <p>
-<a href="http://grenchmark.st.ewi.tudelft.nl/">GrenchMark</a>
-is a framework for synthetic Grid workloads generation,
-submission to real / simulated environments, and for retrieving and
-analyzing the submission results. Currently, Grenchmark is able to run
-applications using Koala and a few other middlewares. Extend Grenchmark
-to use the JavaGAT as a back-end
-such that is possible to run Grenchmark on other middlewares (for instance
-Zorilla) as well.
+Develop a computer poker player that approximates or exceeds state-of-the-art
+implementations. <b>Note:</b> this project requires some literature study,
+and may not even be feasible in the current form.
 </p>
-</ul>
+
+<li><b>Optimal code generation (challenging)</b></li>
+
+<p>
+Develop a program that generates for a small code fragment the <em>optimal</em>
+code sequence, by doing an exhaustive search. <b>Note:</b> this project requires
+some literature study,
+and may not even be feasible in the current form.
+</p>
 
 <hr>
 
