+ Added the first project of Frank.

--- a/content/projects.html
+++ b/content/projects.html
@@ -80,6 +80,43 @@ communicating over the Bluetooth protocol, allowing efficient
 wireless communication.
 </p>
 
+<li><b>The Multimedia PowerGrid</b></li>
+
+<p>
+The extraction of information (knowledge) from image and video data is a 
+challenging and computationally demanding task. To run image and video 
+processing applications on large-scale Grid systems, many inherent Grid 
+complexities need to be overcome. One major complexity is the problem of 
+system heterogeneity.
+</p>
+
+<p>
+Virtualization is a popular way of reducing the problem of the Grid's 
+heterogeneity. The technique has been applied in several application 
+environments (e.g. VMware, .NET) and programming languages (e.g. Java, 
+Perl, Python). From these, Java seems to have become the most widely 
+adopted. As Java has been shown to provide competitive performance in 
+comparison with C/C++, it seems a relevant language for implementing 
+large-scale image and video processing applications.
+</p>
+
+<p>
+In this project you will implement a small parallel image processing 
+library in Java and Ibis (on the basis of an existing library in C++ and 
+MPI). The functionality is to be applied in one or more parallel 
+image/video processing applications (several examples of which we have 
+available). The applications are to be run on a set of cluster systems, 
+potentially at a world-wide scale. The resulting system in Java is to be 
+evaluated by comparing the obtained results with the original C++/MPI 
+system.
+</p>
+
+<p>
+For more information, contact
+<a href="http://www.cs.vu.nl/~fjseins/">Dr. Frank J. Seinstra</a>.
+</p>
+
+
 <li><b>Grid implementation of the coordination language Reo</b></li>
 
 <p>
