--- a/content/ipl.html
+++ b/content/ipl.html
@@ -14,7 +14,7 @@
 </table>
 
 
-<h2>The Ibis Porability Layer (IPL)</h2>
+<h2>The Ibis Portability Layer (IPL)</h2>
 
 <p>The Ibis Portability layer (IPL) is a communication library is specifically
 designed for usage in a grid environment. It has a number of properties which
