Added news item: IPL 2.1

--- a/content/news.html
+++ b/content/news.html
@@ -1,4 +1,12 @@
 <p class=newsitem>
+April 2008: IPL 2.1 is available now! 
+IPL 2.1 is mostly a maintainance release, fixing various problems
+with IPL 2.0.
+For more information and downloads, see the <a
+href="ipl.html">IPL subproject page</a>.
+</p>
+
+<p class=newsitem>
 November 2007: IPL 2.0 is available now! 
 We now support Smartsockets, and are thus able to work in harsh
 networking environments with Firewalls, NATs, etc.  
