--- a/content/news.html
+++ b/content/news.html
@@ -1,4 +1,8 @@
 <p class=newsitem>
+April 2008: There will be an Ibis tutorial on the 19th of May at CCGrid in Lyon, France. See <a href="http://ccgrid2008.ens-lyon.fr">this page</a> for more information and registration. We will also participate in the SCALE challenge and show demo's during the conference.
+</p>
+
+<p class=newsitem>
 April 2008: IPL 2.1 is available now! 
 IPL 2.1 is mostly a maintainance release, fixing various problems
 with IPL 2.0.
