ccgrid news item

--- a/content/news.html
+++ b/content/news.html
@@ -1,5 +1,5 @@
 <p class=newsitem>
-April 2008: There will be an Ibis tutorial on the 19th of May at CCGrid in Lyon, France. See <a href="http://ccgrid2008.ens-lyon.fr">this page</a> for more information and registration. We will also participate in the SCALE challenge and show demo's during the conference.
+April/May 2008: There will be an Ibis tutorial on the 19th of May at CCGrid in Lyon, France. See <a href="http://ccgrid2008.ens-lyon.fr">this page</a> for more information and registration. We will also participate in the SCALE challenge and show demo's during the conference.
 </p>
 
 <p class=newsitem>
