--- a/content/javagat.html
+++ b/content/javagat.html
@@ -49,198 +49,167 @@ JavaGAT does not rely on any external packages or libraries.
 <tr>
 <th>Adaptor</th>
 <th>Status</th>
-<th>Author</th>
 </tr>
 
 <tr>
 <td>Local File</td>
 <td>done</td>
-<td>Rob van Nieuwpoort</td>
 </tr>
 
 <tr>
 <td>Local File Streams</td>
 <td>done</td>
-<td>Rob van Nieuwpoort</td>
 </tr>
 
 <tr>
 <td>Local Random Access File</td>
 <td>done</td>
-<td>Rob van Nieuwpoort</td>
 </tr>
 
 <tr>
 <td>Generic Logical File</td>
 <td>done</td>
-<td>Rob van Nieuwpoort</td>
 </tr>
 
 <tr>
 <td>Pipe: Sockets</td>
 <td>done</td>
-<td>Rob van Nieuwpoort</td>
 </tr>
 
 <tr>
 <td>Local Advert Serive</td>
 <td>done</td>
-<td>Rob van Nieuwpoort</td>
 </tr>
 
 <tr>
 <td>Local Resource Broker (fork)</td>
 <td>done</td>
-<td>Rob van Nieuwpoort</td>
 </tr>
 
 <tr>
 <td>Mercury Monitoring</td>
 <td>done</td>
-<td>Andrei Agapi</td>
 </tr>
 
 <tr>
 <td>GridLab File Adaptor</td>
 <td>done, no longer maintained</td>
-<td>Rob van Nieuwpoort</td>
 </tr>
 
 <tr>
 <td>GridLab Logical File Adaptor (StorageBox)</td>
 <td>done</td>
-<td>Andrei Agapi</td>
 </tr>
 
 <tr>
 <td>GridLab GRMS ResourceBroker</td>
 <td>done</td>
-<td>Rob van Nieuwpoort</td>
 </tr>
 
 <tr>
 <td>Globus GRIDFTP File Adaptor</td>
 <td>done</td>
-<td>Rob van Nieuwpoort</td>
 </tr>
 
 
 <tr>
 <td>Globus GRIDFTP File Adaptor</td>
 <td>done</td>
-<td>Rob van Nieuwpoort</td>
 </tr>
 
 
 <tr>
 <td>Globus GRAM ResourceBroker Adaptor</td>
 <td>done</td>
-<td>Rob van Nieuwpoort</td>
 </tr>
 
 
 <tr>
 <td>ProActive ResourceBroker Adaptor</td>
-<td>coding</td>
-<td>Ceriel Jacobs</td>
+<td>done</td>
 </tr>
 
 
 <tr>
 <td>FTP File Adaptor</td>
 <td>done</td>
-<td>Rob van Nieuwpoort</td>
 </tr>
 
 
 <tr>
 <td>SSH File Adaptor</td>
 <td>done</td>
-<td>Ana-Maria Oprescu, Rob van Nieuwpoort</td>
 </tr>
 
 
 <tr>
 <td>SSH FileStreams</td>
 <td>done</td>
-<td>Ana-Maria Oprescu, Rob van Nieuwpoort</td>
 </tr>
 
 
 <tr>
 <td>SSH ResourceBroker</td>
 <td>done</td>
-<td>Ana-Maria Oprescu, Rob van Nieuwpoort</td>
 </tr>
 
 
 <tr>
 <td>SFTP File Adaptor</td>
 <td>done</td>
-<td>Rob van Nieuwpoort</td>
 </tr>
 
 
 <tr>
 <td>SFTP FileStreams</td>
 <td>done</td>
-<td>Rob van Nieuwpoort</td>
 </tr>
 
 <tr>
 <td>FTP FileStreams</td>
 <td>done</td>
-<td>Rob van Nieuwpoort</td>
 </tr>
 
 <tr>
 <td>HTTP FileStreams</td>
 <td>done</td>
-<td>Rob van Nieuwpoort</td>
 </tr>
 
 <tr>
 <td>HTTPS FileStreams</td>
 <td>done</td>
-<td>Rob van Nieuwpoort</td>
 </tr>
 
 
 <tr>
 <td>Commandline SSH File Adaptor</td>
 <td>done</td>
-<td>Rob van Nieuwpoort</td>
 </tr>
 
 
 <tr>
 <td>Commandline SSH ResourceBroker</td>
 <td>done</td>
-<td>Rob van Nieuwpoort</td>
 </tr>
 
 <tr>
 <td>Copying FileInputStream Adaptor</td>
 <td>done</td>
-<td>Rob van Nieuwpoort</td>
 </tr>
 
 <tr>
 <td>Prun Adaptor (for DAS use only)</td>
 <td>done</td>
-<td>Rob van Nieuwpoort</td>
 </tr>
 
 <tr>
 <td>PBS ResourceBroker</td>
 <td>coding</td>
-<td>Alexander Beck-Ratzka</td>
 </tr>
 
 <tr>
 <td>Sun GridEngine (SGE) ResourceBroker</td>
 <td>coding</td>
-<td>Ole Christian Weidner</td>
 </tr>
 
 </table>
@@ -278,6 +247,11 @@ If you want your name or project in this list, please send an email to rob@cs.vu
 <tr>
 <td>VUMC (Vrije Universiteit Medical Center (Amsterdam) <a href="http://www.vumc.nl">www.vumc.nl</a></td>
 <td>Submit complex medical applications to the grid, data management.</td>
+</tr>
+
+<tr>
+<td>AMC (Amsterdam Medical Center <a href="http://www.amc.nl">www.amc.nl</a></td>
+<td>Medical data management.</td>
 </tr>
 
 <tr>
@@ -329,7 +303,7 @@ If you want your name or project in this list, please send an email to rob@cs.vu
 
 <tr>
 <td><a href="http://scgroup2.ceid.upatras.gr:8000/JylabHomepage">Jylab<a></td>
-<td>unkown</td>
+<td>unknown</td>
 </tr>
 
 <tr>
@@ -339,12 +313,12 @@ If you want your name or project in this list, please send an email to rob@cs.vu
 
 <tr>
 <td><a href="http://www.coregrid.net">CoreGRID<a></td>
-<td>unkown</td>
+<td>unknown</td>
 </tr>
 
 <tr>
 <td><a href="http://www.ac.upc.edu">Universitat Politecnica de Catalunya (UPC)<a></td>
-<td>unkown</td>
+<td>unknown</td>
 </tr>
 
 </table>
