updated JavaGAT page

--- a/content/javagat.html
+++ b/content/javagat.html
@@ -245,6 +245,12 @@ If you want your name or project in this list, please send an email to rob@cs.vu
 </tr>
 
 <tr>
+<td>The <a href="http://www.ogf.org">Open Grid Forum</a> SAGA standard (Simple API for Grid Applications). <a href="http://saga.cct.lsu.edu">saga.cct.lsu.edu</a>
+</td>
+<td>The Java reference implementation of the SAGA standard uses JavaGAT to access the grid middleware.</td>
+</tr>
+
+<tr>
 <td>VUMC (Vrije Universiteit Medical Center (Amsterdam) <a href="http://www.vumc.nl">www.vumc.nl</a></td>
 <td>Submit complex medical applications to the grid, data management.</td>
 </tr>
