added JavaGAT logo

--- a/content/javagat.html
+++ b/content/javagat.html
@@ -15,7 +15,6 @@
 </table>
 
 <h2>JavaGAT</h2>
-
 <p>The Java Grid Application Toolkit (JavaGAT) offers a set of
 coordinated, generic and flexible APIs for accessing grid services
 from application codes, portals, data managements systems.</p>
@@ -331,3 +330,8 @@ If you want your name or project in this list, please send an email to rob@cs.vu
 
 <p>See the <a href="http://www.gridlab.org">GridLab project</a> or the JavaGAT <a href="http://gforge.cs.vu.nl/projects/javagat">CSForge page</a> for more information.</p>
 
+<table summary="logo table" width="100%" cellspacing="10">
+<td align="center">
+<img src="images/JavaGAT.png" alt="JavaGAT logo">
+</td>
+</table>
