--- a/content/menu.html
+++ b/content/menu.html
@@ -25,6 +25,8 @@
 <a class="button" href="sat4satin.html">SAT4Satin</a>
 <!-- <a class="button" href="nqueens.html">NQueens</a> -->
 
+<a class=logo href="javagat.html"><img src="images/JavaGAT-small.png" alt="JavaGAT logo" ></a>
+
 <a class=logo href="http://www.vl-e.nl"><img src="images/vl-e.png" alt="Vl-e logo" ></a>
 
 <a class=logo href="http://www.asci.tudelft.nl"><img src="images/asci.gif" alt="Asci logo"></a>
