--- a/content/news.html
+++ b/content/news.html
@@ -1,4 +1,11 @@
 <p class=newsitem>
+May 2008: Satin 2.1 is available now! 
+Satin 2.1 is the first stand-alone Satin release.
+For more information and downloads, see the <a
+href="satin.html">Satin subproject page</a>.
+</p>
+
+<p class=newsitem>
 May 2008: IPL 2.1.1 is available now! 
 IPL 2.1.1 is mostly a maintainance release, fixing a couple of problems
 with IPL 2.1.
