roelof: - changed javagat page (link to new javadoc) - added newsitem (javagat-2.0-rc1 release)

--- a/content/news.html
+++ b/content/news.html
@@ -1,4 +1,12 @@
 <p class=newsitem>
+May 2008: JavaGAT 2.0-rc1 is available now! 
+JavaGAT 2.0-rc1 contains many bug fixes,
+some changes and additions to the API and new 
+adaptors (among them, Globus 4).
+For more details, please go to the <a href="https://gforge.cs.vu.nl/projects/javagat">JavaGAT project page</a>.
+</p>
+
+<p class=newsitem>
 May 2008: Satin 2.1 is available now! 
 Satin 2.1 is the first stand-alone Satin release.
 For more information and downloads, see the <a
