added tutorial slides

--- a/content/news.html
+++ b/content/news.html
@@ -1,4 +1,8 @@
 <p class=newsitem>
+May 2008: Program and slides for the Ibis tutorial at CCGrid'08 are <a href=tutorial.html>here</a>
+</p>
+
+<p class=newsitem>
 May 2008: JavaGAT 2.0-rc1 is available now! 
 JavaGAT 2.0-rc1 contains many bug fixes,
 some changes and additions to the API and new 
