--- a/javagat.html
+++ b/javagat.html
@@ -12,7 +12,7 @@
 
 <link rel="shortcut icon" href="http://projects.gforge.cs.vu.nl/ibis/favicon.ico" />
 
-<title>Ibis: Efficient Java-based grid computing</title>
+<title>Ibis: Grids As Promised</title>
 </head>
 
 <body>
@@ -27,7 +27,7 @@
 
 
 <td valign="middle" align="center">
-<h1>Ibis: Efficient Java-Based Grid Computing</h1>
+<h1>Ibis: Grids as Promised</h1>
 </td>
 
 <td align="center">
