--- a/content/tutorial.html
+++ b/content/tutorial.html
@@ -1,8 +1,8 @@
 <h2>Tutorial</h2>
 
-Program and slides for the Ibis Tutorial at CCGRID 2008
+<p>Program and slides for the Ibis Tutorial at CCGRID 2008</p>
 
-Note: These slides may be updated before/during the tutorial.
+<p>Note: These slides may be updated before/during the tutorial.</p>
 
 <ul>
 	<li>Introduction
