new zorilla release

--- a/content/news.html
+++ b/content/news.html
@@ -3,6 +3,11 @@ May 2008: Program and slides for the Ibis tutorial at CCGrid'08 are <a href=tuto
 </p>
 
 <p class=newsitem>
+May 2008: New Zorilla Release (1.0 Beta 1). See the 
+ <a href="zorilla.html">Zorilla subproject page</a> for more information on Zorilla, and downloads.
+</p>
+
+<p class=newsitem>
 May 2008: JavaGAT 2.0-rc1 is available now! 
 JavaGAT 2.0-rc1 contains many bug fixes,
 some changes and additions to the API and new 
