final version slides

--- a/content/tutorial.html
+++ b/content/tutorial.html
@@ -2,7 +2,7 @@
 
 <p>Program and slides for the Ibis Tutorial at CCGRID 2008</p>
 
-<p>Note: These slides may be updated before/during the tutorial.</p>
+<p>Update: slides are now final versions given at tutorial</p>
 
 <ul>
 	<li>Introduction
