slides by frank

--- a/content/tutorial.html
+++ b/content/tutorial.html
@@ -51,5 +51,11 @@
 	<li>Users
 	<a href=tutorial/20080519-CCGrid08-Part-8-Users.pdf>[pdf]</a>
 	<a href=tutorial/20080519-CCGrid08-Part-8-Users.pdf>[odp]</a>
+
+	<li>Users 2
+	<a href=tutorial/20080519-CCGrid08-Part-9-Users-2.pdf>[pdf]</a>
+	<a href=tutorial/20080519-CCGrid08-Part-9-Users-2.ppt>[ppt]</a>
+	<a href=tutorial/20080519-CCGrid08-Part-9-Users-2-video.wmv>[video]</a>
+
 </ul>
 
