typo in link to slides

--- a/content/tutorial.html
+++ b/content/tutorial.html
@@ -15,7 +15,7 @@
 
 		<li>JavaGAT
 		<a href=tutorial/20080519-CCGrid08-Part-2-JavaGAT.pdf>[pdf]</a>
-		<a href=tutorial/20080519-CCGrid08-Part-2-JavaGAT.pdf>[odp]</a>
+		<a href=tutorial/20080519-CCGrid08-Part-2-JavaGAT.odp>[odp]</a>
 
 		<li>Zorilla
 		<a href=tutorial/20080519-CCGrid08-Part-3-Zorilla.pdf>[pdf]</a>
