--- a/content/menu.html
+++ b/content/menu.html
@@ -1,6 +1,7 @@
 <a class="button" href="index.html">Home</a>
 <a class="button" href="publications.html">Publications</a>
 <a class="button" href="talks.html">Talks</a>
+<a class="button" href="tutorial.html">Tutorial</a>
 <a class="button" href="people.html">People</a>
 <a class="button" href="users.html">Projects using Ibis</a>
 <a class="button" href="https://gforge.cs.vu.nl/projects/ibis">Project site @ GForge</a>
