added overview section

--- a/content/menu.html
+++ b/content/menu.html
@@ -1,4 +1,5 @@
 <a class="button" href="index.html">Home</a>
+<a class="button" href="overview.html">Overview</a>
 <a class="button" href="publications.html">Publications</a>
 <a class="button" href="talks.html">Talks</a>
 <a class="button" href="tutorial.html">Tutorial</a>
@@ -26,9 +27,12 @@
 <a class="button" href="sat4satin.html">SAT4Satin</a>
 <!-- <a class="button" href="nqueens.html">NQueens</a> -->
 
-<a class=logo href="javagat.html"><img src="images/JavaGAT-small.png" alt="JavaGAT logo" ></a>
 
 <a class=logo href="http://www.vl-e.nl"><img src="images/vl-e.png" alt="Vl-e logo" ></a>
 
+<a class=logo href="javagat.html"><img src="images/JavaGAT-small.png" alt="JavaGAT logo" ></a>
+
+<!--
 <a class=logo href="http://www.asci.tudelft.nl"><img src="images/asci.gif" alt="Asci logo"></a>
+-->
 
