--- a/content/index.html
+++ b/content/index.html
@@ -13,8 +13,9 @@ project members explaining this in detail.</p>
 
 <p>Download a demo video, showing a galaxy simulation written with Satin (one of the Ibis programming models) and deployed with the JavaGAT <a href=downloads/barnes-demo-xvid.avi>here</a>.</p>
 
-<p>
-<img src="images/ibis-factory.png" alt="ibis-factory" >
+<p><center>
+	<img src="images/ibis-factory.png" alt="ibis-factory" >
+</center>
 </p>
 
 
