added some text on zorilla

--- a/content/overview.html
+++ b/content/overview.html
@@ -41,7 +41,7 @@ including native code.</p>
 
 	<tr>
 		<td>I want to build a (desktop)grid quickly with as little effort as possible</td>
-		<td>Zorilla</td>
+		<td>Zorilla: Peer-to-Peer middleware</td>
 	</tr>
 
 	<tr>
