--- a/overview.html
+++ b/overview.html
@@ -36,6 +36,10 @@
 
 </tr>
 
+</table>
+
+<table summary="main table" width="1000px" cellpadding=10>
+
 <tr>
 
 <td id="menucell">
@@ -61,7 +65,7 @@ urchinTracker();
 
 <td id="newscell">
 
-<h2 class=news> What's new?</h2>
+<h2 class=news>What's new?</h2>
 
 <?php
 include ("content/news.html");
