added older news section

--- a/old-news.html
+++ b/old-news.html
@@ -36,10 +36,6 @@
 
 </tr>
 
-</table>
-
-<table summary="main table" width="1000px" cellpadding=10>
-
 <tr>
 
 <td id="menucell" cellpadding=10>
@@ -49,7 +45,7 @@
 </td>
 
 <td id="contentcell"><?php
-include ("content/mpj.html");
+include ("content/old-news.html");
 ?>
 
 <p>
@@ -65,7 +61,7 @@ urchinTracker();
 
 <td id="newscell">
 
-<h2 class=news>What's new?</h2>
+<h2 class=news> What's new?</h2>
 
 <?php
 include ("content/news.html");
