--- a/talks.html
+++ b/talks.html
@@ -42,7 +42,7 @@
 
 <tr>
 
-<td id="menucell">
+<td id="menucell" cellpadding=10>
 
 <?php include ("content/menu.html"); ?>
 
@@ -70,6 +70,8 @@ urchinTracker();
 <?php
 include ("content/news.html");
 ?>
+
+<h3 class=news><a href=old-news.html>Older News</a></h3>
 
 <p>
 <a href="http://validator.w3.org/check?uri=referer"><img src="http://www.w3.org/Icons/valid-html401" alt="Valid HTML 4.01 Strict" height="31" width="88"></a>
