--- a/old-news.html
+++ b/old-news.html
@@ -36,9 +36,13 @@
 
 </tr>
 
+</table>
+
+<table summary="main table" width="1000px" cellpadding=10>
+
 <tr>
 
-<td id="menucell" cellpadding=10>
+<td id="menucell">
 
 <?php include ("content/menu.html"); ?>
 
@@ -61,13 +65,17 @@ urchinTracker();
 
 <td id="newscell">
 
-<h2 class=news> What's new?</h2>
+<div class=news>
+
+<h2>What's new?</h2>
 
 <?php
 include ("content/news.html");
 ?>
 
-<h3 class=news><a href=old-news.html>Older News</a></h3>
+<h3><a href=old-news.html>Older News</a></h3>
+
+</div>
 
 <p>
 <a href="http://validator.w3.org/check?uri=referer"><img src="http://www.w3.org/Icons/valid-html401" alt="Valid HTML 4.01 Strict" height="31" width="88"></a>
