--- a/content/index.html
+++ b/content/index.html
@@ -11,11 +11,10 @@
 href="downloads/rob.mp3">listen to</a> the recording of one of the
 project members explaining this in detail.</p>
 
-<p>Download a demo video, showing a galaxy simulation written with Satin (one of the Ibis programming models) and deployed with the JavaGAT <a href=downloads/barnes-demo-xvid.avi>here</a>.</p>
+<p>Download a demo video, showing a galaxy simulation written with Satin (one of the Ibis programming models) and deployed with the JavaGAT <a href="downloads/barnes-demo-xvid.avi">here</a>.</p>
 
-<p><center>
+<p>
 	<img src="images/ibis-factory.png" alt="ibis-factory" >
-</center>
 </p>
 
 
