--- a/content/overview.html
+++ b/content/overview.html
@@ -71,7 +71,7 @@ including native code.</p>
 	</tr>
 
 <tr>
-		<td>Globus 2, SSH, gLite, Globus 4, all these complecated middlewares are confusing me!</td>
+		<td>Globus 2, SSH, gLite, Globus 4, all these complicated middlewares are confusing me!</td>
 		<td>Java Grid Application Toolkit: Simple Middleware independent APIs</td>
 	</tr>
 
