news item on scale 2008

--- a/content/news.html
+++ b/content/news.html
@@ -1,4 +1,8 @@
 <p class=news>
+May 2008: The Ibis team won 1st place (shared) at the <a href="http://ccgrid2008.ens-lyon.fr/CCGrid2008_SCALE2008.html">SCALE Challenge 2008</a>!
+</p>
+
+<p class=news>
 May 2008: Program and slides for the Ibis tutorial at CCGrid'08 are <a href=tutorial.html>here</a>
 </p>
 
