fixed JavaGAT user

--- a/content/javagat.html
+++ b/content/javagat.html
@@ -322,8 +322,10 @@ If you want your name or project in this list, please send an email to rob@cs.vu
 </tr>
 
 <tr>
-<td><a href="http://www.ac.upc.edu">Universitat Politecnica de Catalunya (UPC)<a></td>
-<td>unknown</td>
+<td><a href="http://www.ac.upc.edu">Universitat Politècnica de Catalunya (UPC)</a> / 
+    <a href="http://www.bsc.es">Barcelona Supercomputing Center (BSC)</a>
+</td>
+<td>Job submission and file transfer in the COMP Superscalar Grid framework</td>
 </tr>
 
 </table>
