added some people to the group removed JavaGAT logo from front page added/updated some pictures ignore .php files

--- a/content/people.html
+++ b/content/people.html
@@ -1,167 +1,151 @@
 <h2><a name="people" id="people">People</a></h2>
 
-  <h4>Faculty</h4>
+<h4>Faculty</h4>
 
-  <div>
+<div>
     <a href="http://www.cs.vu.nl/~bal/"><img src="images/people/henri.jpg" alt="Henri Bal"></a>
     <a href="http://www.cs.vu.nl/~kielmann"><img src="images/people/thilo.jpg" alt=
-    "Thilo Kielmann"></a>
-  </div>From left to right:
+	"Thilo Kielmann"></a>
+</div>
 
-  <ul>
+From left to right:
+<ul>
     <li><a href="http://www.cs.vu.nl/~bal/">Henri E. Bal</a>
-    	<script type="text/javascript">
-	            generate_address( "bal", "cs.vu.nl" ) ;
-		    </script>: Professor</li>
+    <script type="text/javascript"> generate_address( "bal", "cs.vu.nl" ) ; </script>: Professor</li>
 
     <li><a href="http://www.cs.vu.nl/~kielmann/">Thilo Kielmann</a>
-    	<script type="text/javascript">
-	            generate_address( "kielmann", "cs.vu.nl" );
-		    </script>: Associate Professor.</li>
-  </ul>
+    <script type="text/javascript"> generate_address( "kielmann", "cs.vu.nl" ); </script>: Associate Professor.</li>
+</ul>
 
-  <h4>Postdocs</h4>
+<h4>Postdocs</h4>
 
-  <div>
+<div>
     <a href="http://www.cs.vu.nl/~jason"><img src="images/people/jason.jpg" alt=
-    "Jason Maassen"></a> <a href="http://www.cs.vu.nl/~rob"><img src="images/people/rob.jpg" alt=
-    "Rob van Nieuwpoort"></a>
-  </div>
-  From left to right:
+	"Jason Maassen"></a> 
+    <a href="http://www.cs.vu.nl/~rob"><img src="images/people/rob.jpg" alt=
+	"Rob van Nieuwpoort"></a>
+    <a href="http://www.cs.vu.nl/~fjseins"><img src="images/people/frank.jpg" alt=
+	"Frank J. Seinstra"></a>
+</div>
+From left to right:
 
-  <ul>
+<ul>
     <li><a href="http://www.cs.vu.nl/~jason/">Jason Maassen</a>
-    	<script type="text/javascript">
-	            generate_address( "jason", "cs.vu.nl" );
-		    </script>:<br>
+    <script type="text/javascript"> generate_address( "jason", "cs.vu.nl" ); </script>:<br>
     Worked on Ibis design, Ibis TCP implementation, efficient serialization, RMI, Object
     replication (RepMI) and Group Method Invocation (GMI).
     </li>
 
     <li><a href="http://www.cs.vu.nl/~rob/">Rob V. van Nieuwpoort</a> 
-    	<script type="text/javascript">
-	            generate_address( "rob", "cs.vu.nl" );
-		    </script>:<br>
+    <script type="text/javascript"> generate_address( "rob", "cs.vu.nl" ); </script>:<br>
     Worked on Ibis design, Ibis TCP implementation, efficient serialization, RMI and Satin
     (parallel Divide-and-Conquer).
     </li>
 
+    <li><a href="http://www.cs.vu.nl/~fjseins/">Frank J. Seinstra</a> 
+    <script type="text/javascript"> generate_address( "fjseins", "cs.vu.nl" ); </script>:<br>
+    Working on High-performance Distributed Multimedia computing using Ibis
+    </li>
+</ul>
 
-  </ul>
+<h4>Ph.D. students</h4>
 
-  <h4>Ph.D. students</h4>
-
-  <div>
+<div>
     <a href="http://www.cs.vu.nl/~mathijs/"><img src= "images/people/mathijs.jpg" alt="Mathijs den Burger"></a>
     <a href="http://www.cs.vu.nl/~ndrost/"><img src= "images/people/niels.jpg" alt="Niels Drost"></a>
+    <a href="http://www.cs.vu.nl/~amo/"><img src= "images/people/ana.jpg" alt="Ana-Maria Oprescu"></a>
+</div>
+From left to right:
 
-  </div>
-  From left to right:
-
-  <ul>
+<ul>
 
     <li><a href="http://www.cs.vu.nl/~mathijs/">Mathijs den Burger</a>
-    	<script type="text/javascript">
-	            generate_address( "mathijs", "cs.vu.nl" );
-		    </script>:<br>
+    <script type="text/javascript"> generate_address( "mathijs", "cs.vu.nl" ); </script>:<br>
     Working on Multicasting in Grid environments.</li>
 
-    
     <li><a href="http://www.cs.vu.nl/~ndrost/">Niels Drost</a>
-    	<script type="text/javascript">
-	            generate_address( "niels", "cs.vu.nl" );
-		    </script>:<br>
-    Wrote the NIO Ibis implementation and is currently looking into Peer-to-Peer stuff.</li>
+    <script type="text/javascript"> generate_address( "niels", "cs.vu.nl" ); </script>:<br>
+    Wrote the NIO Ibis implementation and is currently working on Peer-to-Peer stuff, including Zorilla.</li>
 
+    <li><a href="http://www.cs.vu.nl/~amo/">Ana-Maria Oprescu</a>
+    <script type="text/javascript"> generate_address( "amo", "cs.vu.nl" ); </script>:<br>
+    Working on a fault-tolerant implementation of RepMI.
+</ul>
 
-  </ul>
+<h4>Programmers</h4>
 
-  <h4>Programmers</h4>
-
-  <div>
+<div>
     <a href="http://www.cs.vu.nl/~ceriel"><img src="images/people/ceriel.jpg" alt=
-    "Ceriel Jacobs"></a> 
+	"Ceriel Jacobs"></a> 
     <a href="http://www.cs.vu.nl/~versto"><img src="images/people/kees_verstoep.jpg" alt="Kees Verstoep"></a>
-  </div>
-  From left to right:
+    <a href="http://www.cs.vu.nl/~rkemp"><img src="images/people/roelof.jpg" alt="Roelof Kemp"></a>
+</div>
+From left to right:
 
-  <ul>
+<ul>
     <li><a href="http://www.cs.vu.nl/~ceriel/">Ceriel J.H. Jacobs</a> 
-    	<script type="text/javascript">
-	            generate_address( "ceriel", "cs.vu.nl" );
-		    </script>:<br>
+    <script type="text/javascript"> generate_address( "ceriel", "cs.vu.nl" ); </script>:<br>
     Worked on Ibis serialization, Ibis RMI, Ibis GMI, bytecode rewriting, and many other
     things.
     </li>
 
     <li><a href="http://www.cs.vu.nl/~versto/">Kees Verstoep</a>
-    	<script type="text/javascript">
-	            generate_address( "versto", "cs.vu.nl" );
-		    </script>:<br>
+    <script type="text/javascript"> generate_address( "versto", "cs.vu.nl" ); </script>:<br>
     Worked on NetIbis and Satin applications including a SAT solver
     </li>
-  </ul>
 
-  <h4>Former members</h4>
+    <li><a href="http://www.cs.vu.nl/~rkemp/">Roelof Kemp</a>
+    <script type="text/javascript"> generate_address( "rkemp", "cs.vu.nl" ); </script>:<br>
+    Working on the JavaGAT and Ibis-Deploy
+    </li>
 
-  <div>
+</ul>
+
+<h4>Former members</h4>
+
+<div>
     <a href="http://dept-info.labri.fr/~aumage"><img src="images/people/olivier.jpg" alt="Olivier Aumage"></a>
     <a href="http://runtime.futurs.inria.fr/adenis"<img src="images/people/alexandre.jpg" 
-    	alt= "Alexandre Denis"></a>
+	alt= "Alexandre Denis"></a>
     <a href="http://www-sop.inria.fr/oasis/personnel/Fabrice.Huet/"><img src="images/people/fabrice.jpg" 
-    	alt="Fabrice Huet"></a> 
+	alt="Fabrice Huet"></a> 
     <a href="http://www.cs.vu.nl/~maik"><img src= "images/people/maik.jpg" alt="Maik Nijhuis"></a> 
     <a href="http://www.cs.vu.nl/~reeuwijk"><img src= "images/people/kees_v_reeuwijk.jpg" 
-    	alt="Kees van Reeuwijk"></a> 
+	alt="Kees van Reeuwijk"></a> 
     <a href= "http://www.cs.vu.nl/~rutger"><img src="images/people/rutger.jpg" alt="Rutger Hofman"></a>
     <a href="http://www.cs.vu.nl/~gosia/"><img src="images/people/gosia.jpg" alt= "Malgorzata Wrzesinska"></a> 
 
-  </div>
-  From left to right:
+</div>
+From left to right:
 
-  <ul>
+<ul>
     <li><a href="http://dept-info.labri.fr/~aumage/">Olivier Aumage</a> 
-    	<script type="text/javascript">
-	            generate_address( "Olivier.Aumage", "labri.fr" );
-		    </script>:<br>
+    <script type="text/javascript"> generate_address( "Olivier.Aumage", "labri.fr" ); </script>:<br>
     Worked on Ibis design, NetIbis.</li>
 
     <li><a href="http://runtime.futurs.inria.fr/adenis/">Alexandre Denis</a> 
-    	<script type="text/javascript">
-	            generate_address( "Alexandre.Denis", "labri.fr" );
-		    </script>:<br>
+    <script type="text/javascript"> generate_address( "Alexandre.Denis", "labri.fr" ); </script>:<br>
     Worked on firewall and NAT support for Ibis.</li>
 
     <li><a href="http://www-sop.inria.fr/oasis/personnel/Fabrice.Huet/">Fabrice Huet</a>
-    	<script type="text/javascript">
-	            generate_address( "Fabrice.Heut", "sophia.inria.fr" );
-		    </script>:<br>
+    <script type="text/javascript"> generate_address( "Fabrice.Heut", "sophia.inria.fr" ); </script>:<br>
     Worked on deploying <a href="http://www-sop.inria.fr/oasis/proactive/">ProActive</a> over
     Ibis.<br></li>
 
     <li><a href="http://www.cs.vu.nl/~maik">Maik Nijhuis</a> 
-    	<script type="text/javascript">
-	            generate_address( "maik", "cs.vu.nl" );
-		    </script>:<br>
+    <script type="text/javascript"> generate_address( "maik", "cs.vu.nl" ); </script>:<br>
     Wrote a BarnesHutt implementation for Satin.</li>
 
     <li><a href="http://www.cs.vu.nl/~reeuwijk/">Kees van Reeuwijk</a> 
-    	<script type="text/javascript">
-	            generate_address( "reeuwijk", "cs.vu.nl" );
-		    </script>:<br>
+    <script type="text/javascript"> generate_address( "reeuwijk", "cs.vu.nl" ); </script>:<br>
     Worked on some larger applications on top of Ibis, for instance a solver for the Satisfiability
     (SAT) problem (written on top of Satin).</li>
 
     <li><a href="http://www.cs.vu.nkkl/~rutger/">Rutger Hofman</a>
-    	<script type="text/javascript">
-	            generate_address( "rutger", "cs.vu.nl" );
-		    </script>:<br>
+    <script type="text/javascript"> generate_address( "rutger", "cs.vu.nl" ); </script>:<br>
     Worked on NetIbis, messagePassing Ibis, CCJ, and many other things.</li>
 
-  <li><a href="http://www.cs.vu.nl/~gosia/">Malgorzata Wrzesinska</a> 
-    	<script type="text/javascript">
-	            generate_address( "gosia", "cs.vu.nl" );
-		    </script>:<br>
+    <li><a href="http://www.cs.vu.nl/~gosia/">Malgorzata Wrzesinska</a> 
+    <script type="text/javascript"> generate_address( "gosia", "cs.vu.nl" ); </script>:<br>
     Worked on Ibis RMI, Satin fault tolerance, and Satin shared objects.</li>
-
 </ul>
