Some more news: RMI 2.1 is out, moved some older items to old-news

--- a/content/news.html
+++ b/content/news.html
@@ -1,4 +1,11 @@
 <p class=news>
+May 2008: Ibis RMI 2.1 is available now! 
+Ibis RMI 2.1 is the first stand-alone Ibis RMI release.
+For more information and downloads, see the <a
+href="rmi.html">Ibis RMI subproject page</a>.
+</p>
+
+<p class=news>
 May 2008: The Ibis team won 1st place (shared) at the <a href="http://ccgrid2008.ens-lyon.fr/CCGrid2008_SCALE2008.html">SCALE Challenge 2008</a>!
 </p>
 
@@ -33,16 +40,3 @@ with IPL 2.1.
 For more information and downloads, see the <a
 href="ipl.html">IPL subproject page</a>.
 </p>
-
-<p class=news>
-April/May 2008: There will be an Ibis tutorial on the 19th of May at CCGrid in Lyon, France. See <a href="http://ccgrid2008.ens-lyon.fr">this page</a> for more information and registration. We will also participate in the SCALE challenge and show demo's during the conference.
-</p>
-
-<p class=news>
-April 2008: IPL 2.1 is available now! 
-IPL 2.1 is mostly a maintainance release, fixing various problems
-with IPL 2.0.
-For more information and downloads, see the <a
-href="ipl.html">IPL subproject page</a>.
-</p>
-
