--- a/content/old-news.html
+++ b/content/old-news.html
@@ -1,3 +1,17 @@
+<h2>2008</h2>
+
+<p>
+April/May 2008: There will be an Ibis tutorial on the 19th of May at CCGrid in Lyon, France. See <a href="http://ccgrid2008.ens-lyon.fr">this page</a> for more information and registration. We will also participate in the SCALE challenge and show demo's during the conference.
+</p>
+
+<p>
+April 2008: IPL 2.1 is available now! 
+IPL 2.1 is mostly a maintainance release, fixing various problems
+with IPL 2.0.
+For more information and downloads, see the <a
+href="ipl.html">IPL subproject page</a>.
+</p>
+
 <h2>2007</h2>
 
 <p>
