new, more general header

--- a/content/projects.html
+++ b/content/projects.html
@@ -1,6 +1,20 @@
 <hr>
 
-
+<h1>Student projects, Ibis and more</h1>
+<p>
+This page contains available projects for VU students, as currently
+offered by the group of prof. Henri Bal and Dr. Thilo Kielmann.
+As many of our activities have to do with the Ibis project, this page
+is located here. Nevertheless, also other topics (from the area of
+high-performance distributed computing) can be found here.
+Please check out the category of project you are interested in:
+<ul>
+<li> <a href="#msc">Master's projects</a>
+<li> <a href="#bsc">Bachelor's projects</a>
+<li> <a href="#lit">Literaturs studies</a>
+<li> <a href="#ipa">Individual programming assignments</a>
+</ul>
+<p>
 
 <h2>Student projects</h2>
 <p>
@@ -13,7 +27,7 @@ Have a look at the projects on this page, and see if there is anything
 that matches your skills.
 </p>
 
-<h2>Master Projects</h2>
+<h2><a name="msc">Master Projects</a></h2>
 
 <p>
 For general information about Master projects,
@@ -219,7 +233,7 @@ and may not even be feasible in the current form.
 
 <hr>
 
-<h2>Bachelor Projects</h2>
+<h2><a name="bsc">Bachelor Projects</a></h2>
 
 <p>
 See the <a href="http://www.few.vu.nl/onderwijs/bachelors/inf/bachelorproject.html">overview</a> for general information.
@@ -237,7 +251,7 @@ information.
 
 <hr>
 
-<h2>Literature Studies</h2>
+<h2><a name="lit">Literature Studies</a></h2>
 
 <p>
 Within the Computer Systems section, literature studies and their examination
@@ -250,7 +264,7 @@ For the necessary technical supervision, please refer to
 
 <hr>
 
-<h2>Programming assignments</h2>
+<h2><a name="ipa">Individual programming assignments</a></h2>
 
 <p>
 Some smaller or non-scientific projects, suitable, for example, for
