--- a/content/projects.html
+++ b/content/projects.html
@@ -1,6 +1,6 @@
 <hr>
 
-<h1>Student projects, Ibis and more</h1>
+<h1>Student projects: Ibis and more</h1>
 <p>
 This page contains available projects for VU students, as currently
 offered by the group of prof. Henri Bal and Dr. Thilo Kielmann.
@@ -9,9 +9,9 @@ is located here. Nevertheless, also other topics (from the area of
 high-performance distributed computing) can be found here.
 Please check out the category of project you are interested in:
 <ul>
-<li> <a href="#msc">Master's projects</a>
-<li> <a href="#bsc">Bachelor's projects</a>
-<li> <a href="#lit">Literaturs studies</a>
+<li> <a href="#msc">Master projects</a>
+<li> <a href="#bsc">Bachelor projects</a>
+<li> <a href="#lit">Literature studies</a>
 <li> <a href="#ipa">Individual programming assignments</a>
 </ul>
 <p>
