Added MPJ stuff

--- a/content/news.html
+++ b/content/news.html
@@ -1,4 +1,11 @@
 <p class=news>
+May 2008: Ibis MPJ 2.1 is available now! 
+Ibis MPJ 2.1 is the first stand-alone Ibis MPJ release.
+For more information and downloads, see the <a
+href="mpj.html">Ibis MPJ subproject page</a>.
+</p>
+
+<p class=news>
 May 2008: Ibis RMI 2.1 is available now! 
 Ibis RMI 2.1 is the first stand-alone Ibis RMI release.
 For more information and downloads, see the <a
