--- a/content/mpj.html
+++ b/content/mpj.html
@@ -21,6 +21,6 @@ to provide MPI-like message passing for Java applications.
 Ibis MPJ is a pure-Java implementation of this interface, and delivers
 high-performance communication, while being deployable on various platforms,
 from Myrinet-based clusters to grids.
-See <a href="publications.html#MPJ">a paper by Markus Bornemann et. al.</a>
+See <a href="publications.html#mpj">a paper by Markus Bornemann et. al.</a>
 for more details.
 </p>
